[gd_scene load_steps=22 format=3 uid="uid://bcfgl37ibygf2"]

[ext_resource type="Script" path="res://Components/Moments/moments.gd" id="1_njm0g"]
[ext_resource type="Texture2D" uid="uid://bnj6rvdpuh0fc" path="res://UITextures/BGTextures/main_city.png" id="1_vcc20"]
[ext_resource type="FontFile" uid="uid://v6ktxqm6y64" path="res://UITextures/Fonts/argentum-sans.semibold.ttf" id="2_mk07u"]
[ext_resource type="StyleBox" uid="uid://chv57rdd2b5s" path="res://UITextures/CustomResource/chat_box_tab.tres" id="3_6yk86"]
[ext_resource type="Texture2D" uid="uid://bhnx7lhb6qxue" path="res://UITextures/Buttons/Empty_button.png" id="4_fdp8m"]
[ext_resource type="StyleBox" uid="uid://cg2j2tlvilrc5" path="res://UITextures/CustomResource/tabmenu_box_texture.tres" id="5_ao0kd"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="6_wtyin"]
[ext_resource type="Script" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="7_yekm0"]
[ext_resource type="PackedScene" uid="uid://cfdxe8w21p21q" path="res://Components/Moments/make_post.tscn" id="9_rh30e"]
[ext_resource type="Texture2D" uid="uid://3rxqq1un1t5e" path="res://UITextures/Buttons/close.png" id="10_36883"]
[ext_resource type="Texture2D" uid="uid://bue3ajov5ngpw" path="res://UITextures/Icons/plus_icon.png" id="10_hmde0"]
[ext_resource type="Texture2D" uid="uid://dw8vtn3ftjpfy" path="res://UITextures/Buttons/close_hover.png" id="11_xpnxk"]
[ext_resource type="PackedScene" uid="uid://cfn5bqa5d0ucl" path="res://Components/Moments/add_comment.tscn" id="13_qa1ro"]
[ext_resource type="PackedScene" uid="uid://c7mwjhpxo1aa7" path="res://Components/Moments/liked_by.tscn" id="13_v58yn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2wc1"]
bg_color = Color(0.396078, 0.396078, 0.396078, 0.219608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2ve4"]
bg_color = Color(0, 0.0588235, 0.0588235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(2.88785e-07, 0.486962, 0.486962, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_all70"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kxlba"]
content_margin_top = 10.0
texture = ExtResource("4_fdp8m")
texture_margin_left = 60.0
texture_margin_right = 60.0
texture_margin_bottom = 12.0
expand_margin_bottom = 5.0

[sub_resource type="Resource" id="Resource_3qwt5"]
script = ExtResource("7_yekm0")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_qxuua"]
script = ExtResource("7_yekm0")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq8nq"]
bg_color = Color(0.0374628, 0.187284, 0.187283, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1
shadow_offset = Vector2(1, 1)

[node name="Moments" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njm0g")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_h2wc1")

[node name="BackgroundTexture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
self_modulate = Color(0.255659, 0.255659, 0.255659, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_vcc20")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/BackgroundTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Panel" type="Panel" parent="Panel/BackgroundTexture/HBoxContainer"]
custom_minimum_size = Vector2(750, 540)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2ve4")

[node name="MomentTab" type="TabContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel"]
unique_name_in_owner = true
self_modulate = Color(0.113725, 0.0980392, 0.2, 0)
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00533333
anchor_top = 0.0037037
anchor_right = 1.00667
anchor_bottom = 0.924074
offset_left = 15.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_mk07u")
theme_override_styles/tab_focus = ExtResource("3_6yk86")
theme_override_styles/panel = SubResource("StyleBoxFlat_all70")
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_kxlba")
theme_override_styles/tab_hovered = ExtResource("3_6yk86")
theme_override_styles/tab_unselected = ExtResource("5_ao0kd")
current_tab = 0
clip_tabs = false
metadata/_edit_use_anchors_ = true

[node name="Hot" type="TabBar" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Hot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 7.0
offset_right = -19.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("6_wtyin")
wheel_scroll_damper = SubResource("Resource_3qwt5")
dragging_scroll_damper = SubResource("Resource_qxuua")
allow_horizontal_scroll = false
hide_scrollbar_over_time = true

[node name="HotMomentsContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Hot/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Latest" type="TabBar" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Latest"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 7.0
offset_right = -19.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("6_wtyin")
wheel_scroll_damper = SubResource("Resource_3qwt5")
dragging_scroll_damper = SubResource("Resource_qxuua")
allow_horizontal_scroll = false
hide_scrollbar_over_time = true

[node name="LatestMomentsContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Latest/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Following" type="TabBar" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Following"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 7.0
offset_right = -19.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("6_wtyin")
wheel_scroll_damper = SubResource("Resource_3qwt5")
dragging_scroll_damper = SubResource("Resource_qxuua")
hide_scrollbar_over_time = true

[node name="FollowingMomentsContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Following/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="My Space" type="TabBar" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/My Space"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 7.0
offset_right = -19.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("6_wtyin")
wheel_scroll_damper = SubResource("Resource_3qwt5")
dragging_scroll_damper = SubResource("Resource_qxuua")
hide_scrollbar_over_time = true

[node name="MyMomentsContainer" type="VBoxContainer" parent="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/My Space/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/BackgroundTexture"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -44.0
offset_right = -12.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Panel" type="Panel" parent="Panel/BackgroundTexture/HBoxContainer2"]
custom_minimum_size = Vector2(39, 39)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rq8nq")

[node name="MakePostButton" type="TextureButton" parent="Panel/BackgroundTexture/HBoxContainer2/Panel"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_hmde0")
ignore_texture_size = true
stretch_mode = 0

[node name="CloseButton" type="TextureButton" parent="Panel/BackgroundTexture"]
layout_mode = 0
size_flags_horizontal = 3
texture_normal = ExtResource("10_36883")
texture_hover = ExtResource("11_xpnxk")

[node name="MakePost" parent="." instance=ExtResource("9_rh30e")]
visible = false
layout_mode = 1

[node name="AddComment" parent="." instance=ExtResource("13_qa1ro")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="LikedBy" parent="." instance=ExtResource("13_v58yn")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="tab_changed" from="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab" to="." method="_on_moment_tab_tab_changed"]
[connection signal="hot_moments_v_scroll_top_drag" from="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Hot/SmoothScrollContainer" to="." method="_on_smooth_scroll_container_hot_moments_v_scroll_top_drag"]
[connection signal="latest_moment_v_scroll_top_drag" from="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Latest/SmoothScrollContainer" to="." method="_on_smooth_scroll_container_latest_moment_v_scroll_top_drag"]
[connection signal="following_moment_v_scroll_top_drag" from="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/Following/SmoothScrollContainer" to="." method="_on_smooth_scroll_container_following_moment_v_scroll_top_drag"]
[connection signal="my_moments_v_scroll_top_drag" from="Panel/BackgroundTexture/HBoxContainer/Panel/MomentTab/My Space/SmoothScrollContainer" to="." method="_on_smooth_scroll_container_my_moments_v_scroll_top_drag"]
[connection signal="pressed" from="Panel/BackgroundTexture/HBoxContainer2/Panel/MakePostButton" to="." method="_on_make_post_button_pressed"]
[connection signal="pressed" from="Panel/BackgroundTexture/CloseButton" to="." method="_on_close_button_pressed"]
